# megalus

./: .gitignore  CHANGELOG.jinja2  CHANGELOG.md  Dockerrun.aws.json  MANIFEST.in  Makefile  Pipfile  README.md  conftest.py  pytest.ini  release.py  requirements.txt  setup.py  tox.ini  version.json
.circleci/: config.yml
deploy/: commands.py  compress.py  config.py  li-deploy.py  main.py  messages.py  requirements.txt  run.py  utils.py
docs/: conf.py  index.rst
example/: megalus.yml
example/api1/: docker-compose.override.yml
example/api2/: docker-compose.yml
example/backend/: docker-compose.yml
example/project_one/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
example/project_three/: docker-compose.yml
example/project_two/: docker-compose.override.yml  docker-compose.yml  pyproject.toml
megalus/: __init__.py  __main__.py  cmd.py  main.py  run.py  test_main.py  utils.py  version.py
megalus/aws/: deploy.py  release_eb.py
megalus/bash/: commands.py  test_bash.py
megalus/check/: commands.py
megalus/clone/: commands.py
megalus/commands/: build.py  commands.py  compress.py  dashboard.py  docker.py  lists.py  npm.py  status.py
megalus/compose/: commands.py
megalus/core/: __init__.py  config.py  context.py  dashboard.py  decorators.py  help.py  helpers.py  megalus.py  (+7 more)
tools/: .li-config  __init__.py  __main__.py  build.py  compress.py  config.py  deploy.py  docker.py  help.py  lists.py  messages.py  npm.py  projects.py  release.py  release_eb.py  run.py  services.py  settings.py  stable.py  tests.py  tunnel.py  utils.py  version.py
(+41 files in other folders)
