[tool.poetry]
name = "project_two"
version = "1.0.0"
description = "Flask example project"
authors = "Megalus chrismaillefaud@gmail.com"

[tool.poetry.dependencies]
flask = "*"
flask_restful = "*"
python = "^3.6"

[tool.megalus]
name = "Project Two"
python_version = "3.6"

[tool.megalus.build]
virtualenv = "pip install poetry && poetry install"

[tool.megalus.run]
virtualenv = "FLASK_APP=flask_app.app poetry run flask run"